--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="burger__image" src="./images/burger.svg" alt="burger">
         </button>
 
-        <div class="header__separator separator hidden--mobile">
+        <div class="header__separator separator separator--hidden">
             <img class="separator__image" src="./images/separator.svg" alt="separator">
         </div>
 
@@ -66,15 +66,15 @@
             </ul>
         </nav>
     </section>
-    <article class="article">
-        <div class="about">
+    <article class="article ">
+        <div class="about ">
             <p class="about__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы
                 можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
-            </p>
-            <p class="about__text hidden--mobile ">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что
+                <br>
+                <br>
+                Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что
                 подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по
                 рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
-
             <div class="expander">
                 <img class="expander__image" src="./images/expand.svg" alt="read-more">
                 <a class="expander__link" href="#">Читать далее</a>
