--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header__inner container">
 
         <button class="header__button burger">
-            <img class="burger__image" src="./images/burger.svg" alt="burger">
+            <img class="burger__image" src="./images/testburger.svg" alt="burger">
         </button>
 
         <div class="header__separator separator separator--hidden">
@@ -23,6 +23,20 @@
         <a class="header__logo logo" href="index.html">
             <img class="logo__img" src="images/logo.svg" alt="scps logo">
         </a>
+
+
+
+        <div class="header__contacts contacts">
+            <button class="header__button phone">
+                <img class="phone__image" src="./images/phone.svg" alt="separator">
+            </button>
+            <button class="header__button chat">
+                <img class="chat__image" src="./images/chat.svg" alt="separator">
+            </button>
+            <button class="header__button profile">
+                <img class="profile__image" src="./images/profile.svg" alt="separator">
+            </button>
+        </div>
 
         <div class="header__separator separator">
             <img class="separator__image" src="./images/separator.svg" alt="separator">
@@ -35,6 +49,7 @@
         <button class="header__button search">
             <img class="search__image" src="./images/search.svg" alt="search">
         </button>
+
     </div>
 </header>
 <main class="content">
@@ -66,7 +81,7 @@
             </ul>
         </nav>
     </section>
-    <article class="article ">
+    <article class="article">
         <div class="about ">
             <p class="about__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы
                 можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
@@ -80,7 +95,9 @@
                 <a class="expander__link" href="#">Читать далее</a>
             </div>
         </div>
-        <img class="article__image" src="./images/pic.jpg" alt="сsp image">
+        <div class="article__image image">
+        <img class="image__item" src="./images/pic.jpg" alt="сsp image">
+        </div>
     </article>
 </main>
 </body>
